--- a/example/image_segmentation/pubspec.yaml
+++ b/example/image_segmentation/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^4.0.3
   tflite_flutter:
     path: ../../
   image: ^4.0.17
